--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,14 @@
 @import 'animate.css';
 
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 /* In your global CSS or inside tailwind.config.js safelist */
 .form-input {
   @apply w-full px-4 py-2 rounded-lg border border-[#ccd6c5] bg-[#f9fbf7] text-[#3a4a2c] placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-[#89a77e];
